update swig list2vector

--- a/swig-binding/list2vector/Makefile
+++ b/swig-binding/list2vector/Makefile
@@ -1,7 +1,7 @@
-all : _example.so example_wrap.cxx
-_example.so : example.h example_wrap.cxx
-	g++ -shared -fPIC -o _example.so example_wrap.cxx -I${CONDA_PREFIX}/include/python3.11
-example_wrap.cxx : example.i
-	swig -c++ -python example.i
+all : _person.so person_wrap.cxx
+_person.so : person.h person_wrap.cxx
+	g++ -shared -fPIC -o _person.so person_wrap.cxx -I${CONDA_PREFIX}/include/python3.11
+person_wrap.cxx : person.i
+	swig -c++ -python person.i
 clean :
-	rm -rf _example.so example_wrap.cxx example.py __pycache__
+	rm -rf _person.so person_wrap.cxx person.py __pycache__
